alexa-kubernetes/k8s.controller/kubernetes/invaders-namespace.yml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": { "name": "invaders", "labels": { "name": "invaders" } },
}
