alexa-kubernetes/k8s.controller/kubernetes/kubeinvaders-namespace.yml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": { "name": "kubeinvaders", "labels": { "name": "kubeinvaders" } },
}
