alexa-kubernetes/k8s.controller/kubernetes/invaders.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    run: invaders
  name: invaders
  namespace: invaders
spec:
  replicas: 10
  selector:
    matchLabels:
      run: invaders
  template:
    metadata:
      labels:
        run: invaders
    spec:
      containers:
        - image: busybox
          command:
            - sleep
            - "3600"
          imagePullPolicy: IfNotPresent
          name: busybox
      restartPolicy: Always
